8157913: Launcher can not find path to libpackager.so Reviewed-by: kcr