modules/fxpackager/src/main/native/launcher/linux/launcher.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, Oracle and/or its affiliates.
+ * Copyright (c) 2014, 2018, Oracle and/or its affiliates.
  * All rights reserved. Use is subject to license terms.
  *
  * This file is available and licensed under the following license:
@@ -45,16 +45,14 @@ typedef void (*stop_launcher)();
 #define MAX_PATH 1024
 
 std::string GetProgramPath() {
+    size_t len = 0;
     std::string result;
-    char *buffer = new char[MAX_PATH];
+    char buffer[MAX_PATH] = {0};
 
-    if (buffer != NULL) {
-        if (readlink("/proc/self/exe", buffer, MAX_PATH - 1) != -1) {
-            buffer[MAX_PATH - 1] = '\0';
-            result = buffer;
-        }
+    if ((len = readlink("/proc/self/exe", buffer, MAX_PATH - 1)) != -1) {
+        buffer[len] = '\0';
 
-        delete[] buffer;
+        result = buffer;
     }
 
     return result;
